--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -134,7 +134,7 @@ header {
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
-/*header ul {
+header ul {
   list-style:none;
   height:40px;
   padding:0;
@@ -149,7 +149,7 @@ header li {
   float:left;
   border-right:1px solid #e0e0e0;
   height:40px;
-}*/
+}
 
 header li:first-child a {
   border-radius:5px 0 0 5px;
@@ -264,6 +264,7 @@ footer {
 
   header {
     padding:0;
+    text-align:center;
   }
 
   header ul, header p.view {
@@ -273,6 +274,7 @@ footer {
   pre, code {
     word-wrap:normal;
   }
+
 }
 
 @media print, screen and (max-width: 480px) {
@@ -286,6 +288,10 @@ footer {
 
   header li, header ul li + li + li {
     width:33%;
+  }
+
+  header {
+    text-align:center;
   }
 }
 
