--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -25,7 +25,7 @@ h1 {
 }
 
 h2 {
-  color:#393939;
+  color:#1B262C;
   font-weight: 500;
 }
 
@@ -200,7 +200,8 @@ section {
 }
 
 small {
-  font-size:11px;
+  font-size:10px;
+  color: #828282;
 }
 
 front-medium1 {
