--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -127,11 +127,25 @@ img {
   margin-right: 10px;
 }
 
+.project{
+  font-style: italic;
+}
+
+header div.box {
+  list-style:none;
+  padding: 5px;
+}
+
 header {
   width:270px;
   float:left;
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
+}
+
+header a{
+  color: #222222;
+  font-size: 13px;
 }
 
 /*header ul {
@@ -241,8 +255,8 @@ footer {
   }
 
   header {
-    /*padding-right:320px;*/
-    text-align: center;
+    padding-right:320px;
+/*    text-align: center;*/
   }
 
   section {
@@ -256,11 +270,12 @@ footer {
     display:inline;
   }
 
-  header ul {
+  header div.box {
     position:absolute;
-    right:50px;
-    top:52px;
+    left:300px;
+    top:50px;
   }
+
 }
 
 @media print, screen and (max-width: 720px) {
@@ -273,7 +288,7 @@ footer {
     text-align: center;
   }
 
-  header ul, header p.view {
+  header ul, header p.view, header div.box {
     position:static;
   }
 
@@ -287,16 +302,12 @@ footer {
     padding:15px;
   }
 
-  header ul {
+  header ul, header div.box {
     width:99%;
   }
 
   header li, header ul li + li + li {
     width:33%;
-  }
-
-  header {
-    text-align: center;
   }
 }
 
