--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -158,8 +158,18 @@ header a{
 /* Style the collapsible content. Note: hidden by default */
 .bibcontent {
   padding: 10px 15px;
+  border-radius: 20px;
   display: none;
-  overflow: hidden;
+  overflow: auto;
+  white-space: nowrap; 
+  background-color: #f1f1f1;
+}
+
+.abstract {
+  padding: 10px 15px;
+  border-radius: 20px;
+  display: none;
+  overflow: auto;
   background-color: #f1f1f1;
 }
 
