--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -152,12 +152,12 @@ img {
 }
 
 .highlight {
-  color:#CC6633;
+  color:#8B0000;
   font-weight:550;
 }
 
 .award {  
-  color:#CC6633;
+  color:#8B0000;
   font-weight:550;
   font-style: italic;
 }
@@ -243,7 +243,7 @@ header ul a:active {
 }
 
 strong {
-  color:#222;
+  color:#004466;
   font-weight:500;
 }
 
