--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -251,8 +251,8 @@ header ul a:active {
 }
 
 strong {
-  color:#004466;
-  font-weight:500;
+  color:#A88F1F;
+  font-weight:600;
 }
 
 header ul li + li + li {
